--- a/chatws/pom.xml
+++ b/chatws/pom.xml
@@ -27,6 +27,7 @@
   	</repositories>
   	
   	<dependencies>
+  	<!-- SERVLET -->
   		<dependency>
   			<groupId>javax.servlet</groupId>
   			<artifactId>javax.servlet-api</artifactId>
@@ -82,6 +83,20 @@
 			<artifactId>javaee-web-api</artifactId>
 			<version>7.0</version>
 			<scope>provided</scope>
+		</dependency>
+		
+		<!-- TEST: JUNIT -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>hamcrest-core</artifactId>
+					<groupId>org.hamcrest</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
   	</dependencies>
 	
