--- a/chatws/pom.xml
+++ b/chatws/pom.xml
@@ -85,6 +85,27 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<!-- LOG4J -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.15</version>
+			<exclusions>
+			    <exclusion>
+			        <groupId>com.sun.jmx</groupId>
+			        <artifactId>jmxri</artifactId>
+			    </exclusion>
+			    <exclusion>
+			        <groupId>com.sun.jdmk</groupId>
+			        <artifactId>jmxtools</artifactId>
+			    </exclusion>
+			    <exclusion>
+			            <groupId>javax.jms</groupId>
+			            <artifactId>jms</artifactId>
+			    </exclusion>
+			</exclusions>
+		</dependency>
+		
 		<!-- TEST: JUNIT -->
 		<dependency>
 			<groupId>junit</groupId>
